Fix form signature field reset button z-index

--- a/app/assets/stylesheets/form_definitions/builder.scss
+++ b/app/assets/stylesheets/form_definitions/builder.scss
@@ -68,3 +68,7 @@
     padding: 15px;
   }
 }
+
+.btn.signature-pad-refresh {
+  z-index: 100 !important;
+}
